horizontal scrolling fixed
footer made responsive

--- a/css/main.css
+++ b/css/main.css
@@ -1083,6 +1083,7 @@ body.mainPage {
   padding: 0;
   height: 100%;
   font-family: Poppins;
+  overflow-x: hidden;
 }
 
 .header {
@@ -1470,59 +1471,69 @@ body.mainPage {
 /* End Custom Scrollbar! */
 
 /* Footer */
-.mainPage .footer {
+.footer {
   background-color: #000;
   padding: 20px;
 }
 
-.mainPage .footer-content {
+.footer-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto;
   color: #fff;
+  padding-top: 10em;
+  padding-bottom: 10em;
 }
 
-.mainPage .logo {
+.logo {
   display: flex;
   flex-direction: column;
   align-items: start;
 }
 
-.mainPage .logo span {
+.logo span {
   font-size: 24px;
   font-weight: bold;
 }
 
-.mainPage .logo small {
+.bold small {
   font-size: 12px;
 }
 
-.mainPage .nav-links {
+.nav-links {
   display: flex;
   gap: 20px;
   font-size: 24px;
 }
 
-.mainPage .nav-links a {
+.nav-links a {
   color: #fff;
   text-decoration: none;
   font-weight: bold;
 }
 
-.mainPage .social-icons {
+.social-icons {
   display: flex;
   gap: 15px;
 }
 
-.mainPage .social-icons svg {
+.social-icons svg {
   color: #fff;
   font-size: 24px;
   width: 60px;
   height: 60px;
 }
 
+@media (max-width: 768px) {
+  .footer-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 2em;
+    
+  }}
 
 /*andre*/
         /*WATCH LIST*/
